--- a/views/template.twig
+++ b/views/template.twig
@@ -55,6 +55,12 @@
         {% block content %}{% endblock %}
     </main>
 
+    <footer class="footer">
+        <div class="container">
+            <span class="text-muted">Este fórum foi desenvolvido pelos membros do grupo. Todo seu código está no <a href="https://github.com/GrupoDeDesenvolvedores/Forum">GitHub</a>.</span>
+        </div>
+    </footer>
+
 </body>
 
 <script src="/javascript/jquery-3.3.1.slim.min.js"></script>
