--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-html, body {
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
     padding: 0px;
-    margin: 0px;
+    margin-bottom: 60px;
+
     background: #0d1423;
-    width: 100%;
-    height: 100%;
 }
 
 .navbar {
@@ -103,12 +107,30 @@ html, body {
     padding-top: 10px;
 }
 
-.card .error {
+.sc-statistics {
+    padding: 0px;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #080e1a;
 }
 
 @media (max-width: 580px) {
 
     .side-panel {
+        display: none;
+    }
+
+}
+
+@media (max-width: 580px) {
+
+    .sc-statistics {
         display: none;
     }
 
